--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,9 +21,8 @@ collections:
 
   - name: "contact" # Used in routes, e.g., /admin/collections/blog
     label: "Contact" # Used in the UI
-    type: "page"
-    layout: "contact"
     folder: "content/" # The path to the folder where the documents are stored
+    format: "frontmatter"
     create: false # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
